--- a/src/app/pages/calculator/calculator.component.html
+++ b/src/app/pages/calculator/calculator.component.html
@@ -1,1 +1,40 @@
-<p>calculator works!</p>
+<div class="calculator-page">
+    <div class="calculator-content">
+        <input type="text" placeholder="Bem-vindo!" class="calculator-visor" id="calculator-visor">
+
+        <div class="row">
+            <button class="calculator-key" type="button">C</button>
+            <button class="calculator-key" type="button">.</button>
+            <button class="calculator-key" type="button">,</button>
+            <button class="calculator-key" type="button">/</button>
+        </div>
+
+        <div class="row">
+            <button class="calculator-key" type="button">1</button>
+            <button class="calculator-key" type="button">2</button>
+            <button class="calculator-key" type="button">3</button>
+            <button class="calculator-key" type="button">x</button>
+        </div>
+
+        <div class="row">
+            <button class="calculator-key" type="button">4</button>
+            <button class="calculator-key" type="button">5</button>
+            <button class="calculator-key" type="button">6</button>
+            <button class="calculator-key" type="button">-</button>
+        </div>
+
+        <div class="row">
+            <button class="calculator-key" type="button">7</button>
+            <button class="calculator-key" type="button">8</button>
+            <button class="calculator-key" type="button">9</button>
+            <button class="calculator-key" type="button">+</button>
+        </div>
+
+        <div class="row">
+            <button class="calculator-key" type="button">(</button>
+            <button class="calculator-key" type="button">0</button>
+            <button class="calculator-key" type="button">)</button>
+            <button class="calculator-key equal-button" type="button">=</button>
+        </div>
+    </div>
+</div>
