--- a/src/app/pages/calculator/calculator.component.scss
+++ b/src/app/pages/calculator/calculator.component.scss
@@ -47,8 +47,10 @@ button[type=button].calculator-key {
     transition: 0.5s;
     flex: 1;
     aspect-ratio: 1 / 1;
-    background-color: white;
+    background-color: rgb(148, 148, 148);
     border: none;
+    border-right: 5px solid rgb(59, 59, 59);
+    border-bottom: 5px solid rgb(59, 59, 59);
     border-radius: 5px;
 
     font-size: min(3rem, 2.5vw);
@@ -56,7 +58,10 @@ button[type=button].calculator-key {
 
     &:active {
         transition: 0.5s;
-        background-color: rgb(0, 140, 255);
+        // border-right: 2px solid rgb(59, 59, 59);
+        // border-bottom: 2px solid rgb(59, 59, 59);
+        //background-color: rgb(0, 140, 255);
+        background-color: rgb(187, 187, 187);
     }
 
     &.equal-button {
