Add margin on bottom of 'calculator-visor'

--- a/src/app/pages/calculator/calculator.component.scss
+++ b/src/app/pages/calculator/calculator.component.scss
@@ -35,6 +35,8 @@ input.calculator-visor {
     border-radius: 5px;
     outline: none;
 
+    margin-bottom: 0.5rem;
+
     background-color: rgb(233, 233, 233);
 }
 
