--- a/src/app/pages/calculator/calculator.component.scss
+++ b/src/app/pages/calculator/calculator.component.scss
@@ -64,11 +64,13 @@ button[type=button].calculator-key {
 
     &:not(.equal-button) {
         border-radius: 5px;
+        border-right: 5px solid rgb(59, 59, 59);
+        border-bottom: 5px solid rgb(48, 48, 48);
     }
 
     &.equal-button {
         background-color: rgb(15, 138, 15);
-        font-weight: 600;
+        font-weight: 500;
         color: rgb(221, 221, 221);
         border-radius: 50%;
     }
