--- a/src/app/pages/calculator/calculator.component.scss
+++ b/src/app/pages/calculator/calculator.component.scss
@@ -32,12 +32,19 @@ input.calculator-visor {
     font-size: 2rem;
     line-height: 2rem;
     border: none;
+    border-top: 5px outset rgb(59, 59, 59);
+    border-left: 5px outset rgb(48, 48, 48);
     border-radius: 5px;
     outline: none;
 
     margin-bottom: 0.5rem;
 
-    background-color: rgb(233, 233, 233);
+    color: black;
+    background-color: rgba(255, 255, 255, 0.8);
+
+    &::placeholder {
+        color: rgba(0, 0, 0, 0.247);
+    }
 }
 
 div.calculator-content > div.row {
