Change mapping to 'clear' action button

--- a/src/app/pages/calculator/calculator.component.html
+++ b/src/app/pages/calculator/calculator.component.html
@@ -3,7 +3,7 @@
         <input type="text" placeholder="Bem-vindo!" class="calculator-visor" id="calculator-visor">
 
         <div class="row">
-            <button class="calculator-key clear-button" (click)="keyPressed('clear', KEY_TYPES.action)" type="button">C</button>
+            <button class="calculator-key clear-button" (click)="keyPressed('C', KEY_TYPES.action)" type="button">C</button>
             <button class="calculator-key" (click)="keyPressed('.', KEY_TYPES.symbol)" type="button">.</button>
             <button class="calculator-key" (click)="keyPressed(',', KEY_TYPES.symbol)" type="button">,</button>
             <button class="calculator-key" (click)="keyPressed('÷', KEY_TYPES.operation)" type="button">÷</button>
